--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
  :root{
    --degreeFrom: 180deg;
-   --degreeTo: 190deg;
+   --degreeTo: 360deg;
  }
  #headerSection{
   background: rgb(0,0,0);
@@ -19,7 +19,7 @@ background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186
   background-image: none;
   min-height: 44px;
   height: auto;
-  margin: -68px auto 0;
+  margin: -120px auto 0;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -224,7 +224,7 @@ td{
   width: 570px;
   height: 279px;
   background-image: none;
-  margin: -283px 0 0 auto;
+  margin: -369px 0 0 auto;
 }
  
 
@@ -268,7 +268,7 @@ td{
 #compass:before {
 	content: '';
 	
-	border: 2px dashed #444;
+	border: 2px dotted rgb(8, 8, 8);
 	position: absolute;
 	left: 10px; right: 10px;
 	bottom: 10px; top: 10px;
@@ -286,12 +286,21 @@ td{
 	border-radius: 50%;
 	
 	background: linear-gradient(
-		-45deg,
-		rgba(255,255,255,0.9) 0%,
-		rgba(255,255,255,0.3) 47%,
+		-180deg,
+		rgba(61, 57, 57, 0.267) 0%,
+		rgba(255, 255, 255, 0.198) 47%,
 		rgba(255,255,255,0) 48%,
 		rgba(255,255,255,0) 100%
-	);
+	),
+  linear-gradient(
+    -90deg,
+		rgba(61, 57, 57, 0.287) 0%,
+		rgba(255,255,255,0.198) 47%,
+		rgba(255,255,255,0) 48%,
+		rgba(255,255,255,0) 100%
+  )
+  ;
+ 
 }
 
 
@@ -305,22 +314,38 @@ td{
 
 /* North */
 #compass span:nth-child(1) {
-	left: 95px; top: 20px;
+	left: 80px; top: 0px;
 }
 /* South */
 #compass span:nth-child(3) {
-	left: 95px; bottom: 20px;
+	left: 70px; bottom: 0px;
 }
 
 /* East */
 #compass span:nth-child(2) {
-	right: 25px; top: 90px;
+	right: 0px; top: 71px;
 }
 /* West */
 #compass span:nth-child(4) {
-	left: 25px; top: 90px;
+	left: 0px; top: 72px;
+}
+#compass span:nth-child(5) {
+  font-size: xx-small;
+	right: 29px; top: 25px;
+}
+#compass span:nth-child(6) {
+  font-size: xx-small;
+	left: 29px; top: 25px;
 }
 
+#compass span:nth-child(7) {
+  font-size: xx-small;
+	right: 27px; top: 135px;
+}
+#compass span:nth-child(8) {
+  font-size: xx-small;
+	left: 27px; top: 135px;
+}
 
 /* Next up, is the pointer */
 
@@ -336,7 +361,7 @@ td{
 	/* Centering it */
 	position: relative;
 	left: 50%; top: 50%;
-	margin-left: -30px; margin-top: -15px;
+	margin-left: -25px; margin-top: -18px;
 	
 	/*background: black;*/
 	animation: rotate 5s cubic-bezier(1,.2,.5,1) infinite alternate;
@@ -364,7 +389,7 @@ on #pointer:before */
 		rgba(255, 45, 45, 0) 100%
 	);
 	
-	transform: skewX(60deg);
+	transform: skewX(65deg);
 }
 
 /* Looks good, lets make the pointer's joint now */
@@ -376,13 +401,13 @@ on #pointer:before */
 	background: #4781c0;
 	border-radius: 50%;
 	box-shadow:
-		inset 0 0 4px 2px #4d4d4d,
+		inset 0 0 4px 2px #070606,
 		0 0 5px 1px white;
 	
 	/* centering it */
 	position: absolute;
-	left: 50%; top: 50%;
-	margin-left: -5px; margin-top: -5px;
+	left: 42%; top: 48%;
+	margin-left: -1px; margin-top: -1px;
 }
 
 
@@ -425,7 +450,7 @@ on #pointer:before */
   .u-section-1 .u-shape-1 {
     width: 392px;
     height: 275px;
-    margin-top: -306px;
+    margin-top: -377px;
   }
 }
 
@@ -596,6 +621,95 @@ on #pointer:before */
     width: auto;
     margin-top: 8px;
     font-size: 1.5rem;
+  }
+  .u-section-1 .u-shape-1 {
+    width: 340px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+}
+@media (max-width: 300px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 943px;
+  }
+
+  .u-section-1 .u-group-1 {
+    min-height: 95px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 8px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 20px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-icon-1 {
+    margin-top: 4px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-table-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-table-cell-3 {
+    line-height: 0.8;
+  }
+
+  .u-section-1 .u-table-cell-4 {
+    font-size: 1.875rem;
+    line-height: 0.8;
+  }
+
+  .u-section-1 .u-table-cell-6 {
+    line-height: 0.8;
+    font-size: 1.875rem;
+  }
+
+  .u-section-1 .u-table-cell-8 {
+    line-height: 0.8;
+    font-size: 1.875rem;
+  }
+
+  .u-section-1 .u-table-cell-10 {
+    line-height: 0.8;
+    font-size: 1.875rem;
+  }
+
+  .u-section-1 .u-table-cell-12 {
+    line-height: 0.8;
+    font-size: 1.875rem;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-group-2 {
+    margin-top: 0px;
+    margin-bottom: 9px;
+    min-height: 47px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 8px;
+    font-size: 0.6rem;
   }
   .u-section-1 .u-shape-1 {
     width: 340px;
