--- a/css/template.css
+++ b/css/template.css
@@ -34941,6 +34941,8 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-text-1 {
     font-size: 1.125rem;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
 
