--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,7 @@
   background: rgb(0,0,0);
 background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186,0,0,1) 53%, rgba(0,0,0,0.9444152661064426) 86%);
  }
- .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url("../images/Sunset_mosque.jpg");
-}
+
 
 .u-section-1 .u-sheet-1 {
   min-height: 511px;
@@ -28,7 +26,7 @@ background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186
 
 .u-section-1 .u-btn-1 {
   border-style: none none solid;
-  margin: 7px auto 0 86px;
+  margin: 7px auto 0 40px;
   padding: 0;
 }
 
@@ -59,19 +57,7 @@ background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186
   text-transform: uppercase;
   font-size: 1.125rem;
 }
-.tableHead{
-  background-color: #920707;
-}
-td{
-  background-color: #000;
-  opacity: 0.8;
-  
-  color: rgb(251, 206, 4);
-  
- 
 
-  
-}
 
 
 .u-section-1 .u-table-cell-3 {
@@ -314,7 +300,7 @@ td{
 
 /* North */
 #compass span:nth-child(1) {
-	left: 80px; top: 0px;
+	left: 90px; top: 0px;
 }
 /* South */
 #compass span:nth-child(3) {
@@ -323,15 +309,15 @@ td{
 
 /* East */
 #compass span:nth-child(2) {
-	right: 0px; top: 71px;
+	right: 0px; top: 78px;
 }
 /* West */
 #compass span:nth-child(4) {
-	left: 0px; top: 72px;
+	left: 0px; top: 77px;
 }
 #compass span:nth-child(5) {
   font-size: xx-small;
-	right: 29px; top: 25px;
+	right: 22px; top: 32px;
 }
 #compass span:nth-child(6) {
   font-size: xx-small;
@@ -414,13 +400,23 @@ img{
   width: 100%;
   max-height: 363px;
   min-height: 363px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow:  0px 0px 5px 5px rgba(83, 5, 5, 0.657);
 }
 .imgbox{
   width:100%;
   height: 80%;
   
   margin-top: 2px;
+}
+.imgbox::before{
+  display:block;
+  content:'';
+  position:absolute;
+  width:100%;
+  height:100%;
+  -moz-box-shadow:inset 0px 0px 6px 6px rgb(24, 2, 2);
+  -webkit-box-shadow:inset 0px 0px 6px 6px rgba(167, 11, 11, 0.849);
+  box-shadow:inset 0px 0px 6px 6px rgba(75, 9, 9, 0.863);
 }
 
 
@@ -490,7 +486,7 @@ img{
 
   .u-section-1 .u-btn-1 {
     margin-top: 5px;
-    margin-left: 84px;
+    margin-left: 40px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -545,7 +541,7 @@ img{
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 85px;
+    margin-left: 40px;
   }
 
   .u-section-1 .u-btn-2 {
