--- a/selectMosque/nicepage.css
+++ b/selectMosque/nicepage.css
@@ -1,8 +1,3 @@
-/*begin-commonstyles library*//*!
- * froala_editor v4.0.6 (https://www.froala.com/wysiwyg-editor)
- * License https://froala.com/wysiwyg-editor/terms/
- * Copyright 2014-2021 Froala Labs
- */
 
 .fr-clearfix::after {
   clear: both;
@@ -95,27 +90,7 @@
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow: visible; }
-/*  .fr-view[dir="rtl"] blockquote {
-    border-left: none;
-    border-right: solid 2px #5E35B1;
-    margin-right: 0;
-    padding-right: 5px;
-    padding-left: 0; }
-    .fr-view[dir="rtl"] blockquote blockquote {
-      border-color: #00BCD4; }
-      .fr-view[dir="rtl"] blockquote blockquote blockquote {
-        border-color: #43A047; }
-  .fr-view blockquote {
-    border-left: solid 2px #5E35B1;
-    margin-left: 0;
-    padding-left: 5px;
-    color: #5E35B1; }
-    .fr-view blockquote blockquote {
-      border-color: #00BCD4;
-      color: #00BCD4; }
-      .fr-view blockquote blockquote blockquote {
-        border-color: #43A047;
-        color: #43A047; } */
+
   .fr-view span.fr-emoticon {
     font-weight: normal;
     font-family: "Apple Color Emoji","Segoe UI Emoji","NotoColorEmoji","Segoe UI Symbol","Android Emoji","EmojiSymbols";
@@ -17200,6 +17175,7 @@ a.pswp__share--download:hover {
   width: 100%;
   border-collapse: collapse;
   text-align: left;
+  
 }
 .u-table th,
 .u-table td {
@@ -20063,7 +20039,7 @@ h6 {
 .u-overlap.u-overlap-transparent .u-header,
 .u-image,
 .u-gradient {
-  color: #160b0b;
+  color: #111111;
 }
 .u-shading,
 .u-overlap.u-overlap-contrast .u-header {
@@ -34759,7 +34735,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-header .u-group-1 {
   background-image: linear-gradient(black, #db545a);
-  min-height: 171px;
+  min-height: 178px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -34773,79 +34749,110 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 8.5rem;
   line-height: 1.4;
   font-weight: 900;
-  margin: 0px auto 0 191px;
+  margin: 5px auto 0 20%;
 }
 
 .u-header .u-text-2 {
   font-size: 1.5rem;
-  margin: -100px 19px 0 auto;
+  margin: -95px 0 0 auto;
 }
+
+.u-header .u-icon-1 {
+  width: 22px;
+  height: 22px;
+  margin: -63px auto 0 38px;
+}
+
 .u-header .u-text-3 {
   font-size: 1rem;
-  margin: -1px 19px 0 auto;
+  margin: 18px auto 0 31px;
 }
-@media (min-width: 1400px) {
-  
 
-  .u-header .u-text-1 {
-    font-size: 8vw;
-    margin-left: 24vw;
-    margin-right: 15px;
-    color:red;
-  }
+.u-header .u-text-4 {
+  font-size: 1.1rem;
+  text-align: left;
+  margin: 8px 0 0 auto;
 }
 @media (max-width: 1319px) {
+  .u-header .u-text-1 {
+    font-size: 8rem;
+    line-height: 1.4;
+    font-weight: 900;
+    margin: 5px auto 0 190px;
+  }
+
+}
+@media (max-width: 1256px) {
   .u-header .u-text-1 {
     font-size: 7.8rem;
     line-height: 1.4;
     font-weight: 900;
-    margin: 5px auto 0 160px;
+    margin: 5px auto 0 190px;
   }
-
-}
-@media (max-width: 1198px) {
-   .u-header {
-    min-height: 148px;
-  }
-  .u-header .u-text-1 {
-    width: auto;
-    margin-top: 10px;
-    margin-left:-3rem;
-    font-size: 6.8rem;
-    
-  }
-
-  .u-header .u-group-1 {
-    min-height: 148px;
-  }
-
-  .u-header .u-container-layout-1 {
-    padding-left: 13px;
-    padding-right: 13px;
-  }
-
-  
 
   .u-header .u-text-2 {
     width: auto;
-    margin-top: -88px;
-    margin-right: 10px;
-    font-size:1.2rem;
+    
+    font-size: 1rem;
   }
+  .u-header .u-text-4 {
+    width: auto;
+   
+    font-size: 0.8rem;
+  }
+
+}
+@media (max-width: 1199px) {
+   .u-header {
+    min-height: 189px;
+  }
+
+  .u-header .u-group-1 {
+    min-height: 189px;
+  }
+
+  .u-header .u-text-1 {
+    width: auto;
+    margin-top: 10px;
+    margin-left:122px;
+    font-size: 6.6rem;
+  }
+
+  .u-header .u-text-2 {
+    width: auto;
+    margin-top: -87px;
+    font-size: 1rem;
+  }
+
+  .u-header .u-icon-1 {
+    width: 22px;
+    margin-top: -28px;
+    margin-left: 31px;
+  }
+
   .u-header .u-text-3 {
     width: auto;
-    margin-top: -1px;
-    margin-right: 10px;
+    margin-top: 11px;
+    margin-left: 24px;
+  }
+
+  .u-header .u-text-4 {
+    width: auto;
+    margin-top: -24px;
+    font-size: 0.8rem;
   }
 }
 @media (max-width: 991px) {
    .u-header {
-    min-height: 170px;
+    min-height: 223px;
   }
 
   .u-header .u-group-1 {
-    min-height: 169px;
-    margin-bottom: -1px;
+    min-height: 223px;
+  }
+
+  .u-header .u-container-layout-1 {
+    padding-bottom: 0;
   }
 
   .u-header .u-text-1 {
@@ -34855,58 +34862,94 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-text-2 {
-    margin-top: -28px;
+    margin-top: -22px;
     margin-right: auto;
-    
   }
+
+  .u-header .u-icon-1 {
+    margin-top: -84px;
+    margin-left: 28px;
+  }
+
   .u-header .u-text-3 {
-    margin-top: -1px;
+    margin-top: 13px;
+    margin-left: 21px;
+  }
+
+  .u-header .u-text-4 {
+    margin-top: 44px;
     margin-right: auto;
-    
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-group-1 {
-    min-height: 169px;
+  .u-header .u-container-layout-1 {
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
-  .u-header .u-container-layout-1 {
-    padding: 6px 10px 30px;
+  .u-header .u-text-1 {
+    margin-top: 21px;
+    margin-right: 98px;
+    margin-left: auto;
+    font-size:4.5rem;
   }
 
   .u-header .u-text-2 {
     margin-top: -21px;
   }
+
+  .u-header .u-icon-1 {
+    margin-top: -15px;
+    margin-left: 48px;
+  }
+
   .u-header .u-text-3 {
-    margin-top: -2px;
+    margin-top: 24px;
+    margin-left: 41px;
+  }
+
+  .u-header .u-text-4 {
+    margin-top: -33px;
   }
 }
 @media (max-width: 575px) {
-   .u-header {
-    min-height: 156px;
-  }
-
   .u-header .u-group-1 {
-    min-height: 155px;
-    margin-top: 1px;
-    margin-bottom: 1px;
+    min-height: 220px;
   }
 
   .u-header .u-text-1 {
-    font-size: 3.75rem;
+    font-size: 3rem;
     margin-top: 28px;
     margin:auto;
   }
 
   .u-header .u-text-2 {
     font-size: 1.25rem;
-    margin-top: -10px;
+    margin-top: 16px;
   }
+
+  .u-header .u-icon-1 {
+    margin-top: 10px;
+    margin-left:50%;
+    margin-right:50%;
+    margin:auto;
+   
+  }
+
   .u-header .u-text-3 {
-    font-size: 1rem;
+    margin-top: 19px;
+    margin-left:50%;
+    margin-right:50%;
+    margin:auto;
   }
+
+  .u-header .u-text-4 {
+    font-size: 1.25rem;
+    margin-top: 16px;
+  }
+  
 }
- .u-footer {
+.u-footer {
   background: rgb(186,0,0);
   background: linear-gradient(180deg, rgba(186,0,0,1) 4%, rgba(0,0,0,1) 92%);
 }
@@ -34918,7 +34961,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-text-1 {
   font-size: 2.25rem;
   line-height: 57.6px;
-  margin: 13px auto;
+  margin: 4px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-text-1 {
@@ -34954,11 +34997,8 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-text-1 {
     font-size: 1.125rem;
-    margin-left: 15px;
-    margin-right: 15px;
   }
 }
-
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
