--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186
 #compass:before {
 	content: '';
 	
-	border: 2px dotted rgb(8, 8, 8);
+	border: 2px dotted rgba(255, 255, 255, 0.76);
 	position: absolute;
 	left: 10px; right: 10px;
 	bottom: 10px; top: 10px;
@@ -662,6 +662,9 @@ img{
     width: 340px;
     margin-right: initial;
     margin-left: initial;
+  }
+  footer #marquee{
+    font-size: 1.5rem;
   }
 }
 @media (max-width: 300px) {
