--- a/selectMosque/scss/custome.scss
+++ b/selectMosque/scss/custome.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
 @import url('https://fonts.googleapis.com/css?family=Bebas Neue');
 @import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Playfair Display');
 html, body {
     overflow-x: hidden;
   }
@@ -23,7 +24,7 @@ body{
 
 header{
     color: rgb(255, 255, 255) !important;
-    height: 10rem;
+    height: 11rem;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,0.9500175070028011) 14%, rgba(186,0,0,1) 53%, rgba(0,0,0,0.9444152661064426) 86%);
    
@@ -33,8 +34,15 @@ header{
         margin-right: -4rem;
         padding: 0% !important;
         text-align: center;
+        #autoPlay{
+            font-size: 0.8rem;
+            margin-left: 1rem;
+            display: block;
+        }
+      
         .main{
             margin-top: 50%;
+            
            
         }
         #time{
@@ -70,12 +78,12 @@ header{
     background-position: center center fixed;
     width: 100%;
     height: 100%;
-    min-height: 511px;
+    min-height: fit-content;
    
     .table_div{
         .row{
             .table-responsive{
-                margin-top: 0.5rem;
+               
                 height: 100%;
                 
                 table{
@@ -84,10 +92,10 @@ header{
                     color: rgb(255, 238, 4);
                     th{
                         text-align: center;
-                        font-size: 1.5rem;
+                        font-size: 1.4rem;
                     }
                     td{
-                        font-size: 1.5rem;
+                        font-size: 1.3rem;
                         font-weight: bold;
                         font-family: Noto Sans;
                     }
@@ -99,6 +107,111 @@ header{
             
         }
     }
+    .slider{
+        /* Slideshow container */
+.slideshow-container {
+    position: relative;
+    background: #030303c2;
+    max-height:20rem;
+    min-height: 20rem;
+    border: 1px dashed red;
+    overflow: hidden;
+  }
+  
+  /* Slides */
+  .mySlides {
+    display: none;
+    padding: 1rem;
+    text-align: center;
+    transition: 400ms;
+    color: white;
+    overflow: hidden;
+    font-family:Merriweather ;
+    vertical-align: middle;
+    q{
+        font-size: 1.2rem;
+    }
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #888;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+  }
+  
+ 
+  
+ 
+  
+  
+ 
+  
+  /* Add an italic font style to all quotes */
+ 
+  
+
+        
+       
+}
+.center{
+    width: 100%;
+    text-align: center;
+    margin-left: 50%;
+    margin-right: 50%;
+    margin: auto;
+    height: fit-content;
+  
+    .parent{
+        display: inline-flex;
+      justify-content: center;
+      gap: 12px;
+      margin-top: -1rem;
+     
+      img{
+          margin-left: 100%;
+          margin-top: -1rem;
+      }
+    
+    }
+}
+.logo{
+    width: 8rem;
+    height: 8rem;
+    max-width: 100%;
+    margin-right: 50%;
+    margin-left: 50%;
+    margin: auto;
+    margin-top: 5px;
+    img{
+        max-width: 100%;
+        max-height: 100%;
+        min-height: 100%;
+       
+    }
+}
+    
     .location_div{
         text-align: center;
         width: fit-content;
@@ -110,17 +223,22 @@ header{
         border: 1px solid;
         h4{
             padding: 0rem 4rem 0rem 4rem;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             color: white;
+        }
+        h5 {
+            color: white;
+            font-family: Oswald;
         }
     }
 }
 footer{
+    
     position:relative;
     
     bottom:0;
     width: calc(100%);
-    padding: 20px;
+    padding: 15px;
     color: white;
     background: rgb(186,0,0);
 background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba(0,0,0,1) 69%);
@@ -128,11 +246,59 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
         width: 95%;
         font-family: Merriweather;
         marquee{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     }
     
+}
+
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+.loading {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgb(240, 17, 10);
+  z-index: 99;
+}
+.loading:after {
+  content: "";
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: -30px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  border: 6px solid #f2f2f2;
+  border-top: 6px dotted #f2f2f2;
+  border-bottom: 6px dotted #f2f2f2;
+  border-radius: 50%;
+  animation: loading 2s infinite;
+}
+.loading:before {
+  font-family: 'Lobster', cursive;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: white;
+  content: "Loading...";
+  position: absolute;
+  top: 57%;
+  text-align: center;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+@keyframes loading {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(360deg);
+  }
 }
 // XX-Large devices (larger desktops, 1400px and up)
 @media (min-width: 1400px) { 
@@ -143,6 +309,17 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     header{
         height: fit-content;
         width: 100% !important;
+        .first{
+            padding-left: 5rem;
+            padding-top: 3rem;
+        }
+        #autoPlay{
+            font-size: 1.5vw !important;
+        }
+        i{
+            font-size: 3vw !important;
+            margin-bottom: 1rem;
+        }
         #main{
             font-size: 2vw !important;
         }
@@ -177,6 +354,15 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
         td,th{
             font-size: 2vw !important;
         }
+        .slideshow-container{
+            min-height: 23vw !important;
+            max-height: 23vw !important;
+        }
+        .mySlides{
+            q{
+             font-size: 2vw !important;
+            }
+         }
 
         .row{
             img{
@@ -184,14 +370,40 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     max-height: 25vw;
     min-height: 25vw;
             }
+           
         }
         .location_div{
+            margin-top: calc(2vh + 2vw);
+            h5{
+                font-size: 1.2vw !important;
+            }
             #location{
                 font-size: 2vw !important;
             }
         }
+
+        .center{
+       
+      
+            .parent{
+               
+              margin-top: -3rem !important;
+              .logo{
+                width:7vw;
+                height: 7vw;
+              }
+              
+             img{
+                margin-left: 100% !important;
+                
+             }
+        
+            
+            }
+        }
     }
     footer{
+        bottom: 2vh;
         #marquee{
             font-size: 3vw
         }
@@ -209,7 +421,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
         height: fit-content;
         width: 100%;
         .row{
-            margin-top: -45%;
+            margin-top: 4%;
             #time{
                 font-size: 3.5rem !important;
             }
@@ -223,6 +435,23 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     }
     th{
         font-size: 0.9rem !important;
+    }
+    .center{
+       
+      
+        .parent{
+            display: block !important;
+            
+          margin-top:5% !important;
+         
+          img{
+            margin-top:5% !important;
+            margin-left: 50% !important;
+            margin-right: 50%;
+            margin: auto!important;
+          }
+        
+        }
     }
     footer{
         #marquee{
@@ -246,7 +475,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
              #time{
                 font-size: 4rem !important;
             }
-            margin-top: -45%;
+            margin-top: 4%;
             .third{
                 margin-top: -14%;
             }
@@ -257,6 +486,23 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     }
     th{
         font-size: 1rem !important;
+    }
+    .center{
+       
+      
+        .parent{
+            display: block !important;
+            
+          margin-top:5% !important;
+         
+          img{
+            margin-top:5% !important;
+            margin-left: 50% !important;
+            margin-right: 50%;
+            margin: auto!important;
+          }
+        
+        }
     }
     footer{
         #marquee{
@@ -269,37 +515,66 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     }
     
 }
-@media (min-width: 600px) and (max-width: 750px){
+@media (min-width: 600px) and (max-width: 768px){
     header{
         height: fit-content;
         .row{
-            margin-top: -53%;
+            margin-top: 2%;
 
             .third{
                 margin-top: -19%;
             }
         }
     }
+    .center{
+       
+      
+        .parent{
+            display: block !important;
+            
+          margin-top:5% !important;
+         
+          img{
+            margin-top:5% !important;
+            margin-left: 50% !important;
+            margin-right: 50%;
+            margin: auto!important;
+          }
+        
+        }
+    }
+    footer{
+        marquee{
+            font-size: 1.2rem;
+        }
+    }
 
 }
-@media (min-width: 750px) and (max-width: 945px){
+@media (min-width: 768px) and (max-width: 945px){
 
 header{
     height: 10rem;
-    #time{
-        font-size: 5.4rem !important;
+    .row{
+       
     }
-    .dates{
-        h4{
-            font-size: 1rem !important;
-        }
-        h5{
-            font-size: 0.8rem !important;
-        }
-    }
+    
+   
 }
     #sec-11e4{
-    height: 100vh;
+        .center{
+       
+      
+            .parent{
+               
+              margin-top: 3rem !important;
+             img{
+                 margin: 0% !important;
+             }
+        
+            
+            }
+        }
+  
 }
 footer{
     
@@ -324,7 +599,22 @@ footer{
                  font-size: 1.2rem !important;
              }
          }
+
+         .center{
+       
+      
+            .parent{
+               
+              margin-top: 3rem !important;
+             img{
+                 margin: 0% !important;
+             }
+        
+            
+            }
+        }
     }
+    
 
 }
 @media (min-width: 946px) and (max-width: 1200px){
