--- a/selectMosque/scss/custome.scss
+++ b/selectMosque/scss/custome.scss
@@ -313,7 +313,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
             padding-left: 5rem;
             padding-top: 3rem;
         }
-        #autoPlay{
+        .autoPlay{
             font-size: 1.5vw !important;
         }
         i{
@@ -421,7 +421,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
         height: fit-content;
         width: 100%;
         .row{
-            margin-top: 4%;
+            margin-top: -45%;
             #time{
                 font-size: 3.5rem !important;
             }
@@ -475,7 +475,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
              #time{
                 font-size: 4rem !important;
             }
-            margin-top: 4%;
+            margin-top: -45%;
             .third{
                 margin-top: -14%;
             }
@@ -519,7 +519,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
     header{
         height: fit-content;
         .row{
-            margin-top: 2%;
+            margin-top: -53%;
 
             .third{
                 margin-top: -19%;
