--- a/selectMosque/scss/custome.css
+++ b/selectMosque/scss/custome.css
@@ -325,7 +325,7 @@ footer .text marquee {
     padding-left: 5rem;
     padding-top: 3rem;
   }
-  header .autoPlay {
+  header #autoPlay {
     font-size: 1.5vw !important;
   }
   header i {
