--- a/selectMosque/scss/custome.scss
+++ b/selectMosque/scss/custome.scss
@@ -313,7 +313,7 @@ background: linear-gradient(180deg, rgba(186,0,0,1) 3%, rgba(52,1,1,1) 28%, rgba
             padding-left: 5rem;
             padding-top: 3rem;
         }
-        .autoPlay{
+        #autoPlay{
             font-size: 1.5vw !important;
         }
         i{
